Li 179 disable e sign flow for trillion loans (#1778)
* feat: removed digi sign flow from TL

* feat: removed digi sign flow from TL

* enhancement: removed List.of and used singletonList, removed unused imports